web/src/Hub.css
a {
  color: #008ACF;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

header {
  padding: 12px;
  background-color:#008ACF;
  color: #f0f0f0;
}
header .header-homepage {
  font-size: 2em;
  color: inherit;
  font-weight: inherit;
  margin-right: 30px;
}

header .filters-wrapper {
  display: inline-block;
  vertical-align: bottom;
  margin-top: 10px;
}
header .filters-wrapper > * {
  display: inline-block;
  min-width: 220px;
  color: #333;
  margin-left: 4px;
  vertical-align: bottom;
}
header .filter-box > input {
  width: 400px;
  padding: 0 8px;
  border-radius: 4px;
  border: 1px solid #666;
  min-height: 38px;
}

section {
  padding: 10px 12px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: flex-start;
  align-items: stretch;
  align-content: flex-start;
}
article {
  flex: 0 0 49%;
  max-width: 49%;
  background-color: #fafafa;
  border: 1px solid #ccc;
  padding: 12px;
  border-radius: 4px;
  margin-top: 8px;
}
article:last-of-type {
  margin-left: .5%;
}
article:hover {
  background-color: #fefefe;
  border-color: #aaa;
  box-shadow: 0px 0px 8px #999;
}

article .name {
  text-align: center;
  font-size: 1.2em;
  padding: 0 12px 4px 12px;
  border-bottom: 1px solid #eee;
}
article .content {
  padding: 12px 150px 12px 12px;
  position: relative;
}
aside {
  position: absolute;
  top: 12px;
  bottom: 0;
  right: 0;
  width: 130px;
  padding-left: 8px;
  border-left: 1px solid #eee;
}
aside > * {
  margin-top: 5px;
}

article .content > div {
  margin-top: 10px;
}
article .content .text-description {
  min-height: 4em;
}
article .content code {
  font-family: 'Dosis';
  font-size: .9em;
  background-color: #f7f7f7;
  padding: 2px 8px;
  line-height: 1.5em;
  border-radius: 2px;
  border: 1px solid #ccc;
}

.text-bold {
  font-family: 'MavenPro Bold';
}
.text-light {
  font-family: 'MavenPro Light';
}
.text-tiny {
  font-size: .7em;
}
.text-smaller {
  font-size: .8em;
}
.text-small {
  font-size: .9em;
}
.text-big {
  font-size: 1.1em;
}
.text-bigger {
  font-size: 1.2em;
}
.text-label {
  color: #333;
  width: 70px;
  display: inline-block;
}

.link,
.button-link {
  vertical-align: sub;
  color: #008ACF;
}
.not-a-real-link {
  vertical-align: sub;
  color: #333;
}
.link svg,
.not-a-real-link svg,
.button-link svg {
  font-size: inherit;
  vertical-align: inherit;
  margin: 0 .2em;
}
.button-link {
  border: none;
  background: none;
  padding: 0;
  font-family: inherit;
}
.button-link:hover {
  text-decoration: underline;
  cursor: pointer;
}

.mutation {
  bottom: 0;
  position: absolute;
  width: 90%;
  text-align: center;
  border-top: 1px solid #eee;
  padding-top: 12px;
}

.badge {
  margin-right: 4px;
  padding: 3px 6px;
  border-radius: 2px;
  line-height: 1.2em;
  font-family: 'Dosis';
}
.badge.resource {
  background-color: #E4F6EE;
  border: 1px solid #30BA78;
}
.badge.resource:hover,
.badge.keyword:hover {
  text-decoration: underline;
  cursor: pointer;
}
.badge.keyword  {
  background-color: #FFECB5;
  border: 1px solid #FFC107;
}

mark {
  background-color: #DC3545;
  color: #fff;
}

button {
  position: relative;
}
#copy-registry {
  vertical-align: middle;
}

/*** HACK ***/
/* react-select - give the same style of the .badge.resources */
.resources-select-container .css-1rhbuit-multiValue {
  background-color: #E4F6EE!important;
  border: 1px solid #30BA78!important;
  margin-top: 0;
  margin-bottom: 0;
  font-family: 'Dosis';
}
.keywords-select-container .css-1rhbuit-multiValue {
  background-color: #FFECB5!important;
  border: 1px solid #FFC107!important;
  margin-top: 0;
  margin-bottom: 0;
  font-family: 'Dosis';
}
.filter-box > div > div {
  border: 1px solid #666;
  border-radius: 4px;
}

/* material tooltip - customize the style */
.MuiTooltip-tooltip {
  font-size: .8em!important;
  background-color: #0C322C!important;
}
.MuiTooltip-arrow {
  color: #0C322C!important;
}
/*** END OF HACK ***/


/*** RESPONSIVE RULES ***/
@media only screen and (min-width: 1280px) {

}
@media only screen and (max-width: 1024px) {
  header .filters-wrapper {
    display: block;
  }
  header .filters-wrapper > * {
    min-width: 200px;
  }
  header .filter-box > input {
    width: 320px;
  }
  article {
    flex: 0 0 100%;
    max-width: 100%;
  }
  article:last-of-type {
    margin-left: 0;
  }
}
@media only screen and (max-width: 768px) {
  header .filters-wrapper > * {
    margin: .1em 0;
    min-width: 0;
    width: 100%;
  }
  header .filter-box > input {
    width: 100%;
  }
  article aside {
    position: relative;
    border: none;
    width: 100%;
    top: auto;
    bottom: auto;
    right: auto;
    padding: 12px 0 0 0;
  }
  article aside > * {
    display: inline-block;
    margin: 0;
    margin-right: 8px;
    vertical-align: middle;
  }
  article .content {
    padding: 12px;
  }
  article aside .mutation {
    position: relative;
    bottom: auto;
    display: block;
    border: none;
    width: auto;
    padding: 0;
    margin-right: 0;
    margin-top: 4px;
    text-align: right;
  }
  article aside .mutation > * {
    vertical-align: sub;
    display: inline-block;
  }
  article .registry-wrapper {
    display: none;
  }

  .badge {
    margin-right: 4px;
    padding: 1px 4px;
  }
}
/*** END OF RESPONSIVE RULES ***/

